style: fix footer whitespace on mobile

--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -26,6 +26,7 @@
   @include xs {
     display: flex;
     flex-direction: column;
+    gap: 2rem;
   }
 }
 
@@ -42,6 +43,7 @@
   grid-row: 1 / -1;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 2rem;
   margin-right: 4rem;
 
@@ -49,6 +51,10 @@
     grid-column: 1 / -1;
     grid-row: 1;
     margin-right: 0;
+  }
+
+  @include xs {
+    margin-bottom: 2rem;
   }
 }
 
@@ -104,6 +110,7 @@
 
   @include xs {
     align-self: flex-start;
+    margin-bottom: 2rem;
   }
 }
 
@@ -135,7 +142,6 @@
 
   @include lg {
     grid-column: 1 / -1;
-    justify-self: center;
   }
 
   @include xs {
